# HonkaiStarRailWikiDataParser

./: .gitignore  README.md  fix_data.py  index.html  main.py  pyproject.toml  requirements.txt
.github/workflows/: python.yml
data/: avatar_eidolon_icons.json  avatar_icons.json  avatars.json  head_icons.json  light_cone_icons.json  light_cones.json  materials.json  monsters.json  phone_themes.json  relic_config.json  relics.json
data/avatar_gacha/: info.json
data/destiny/: info.json
data/element/: info.json
data/mihomo_map/: avatars.json  character_promotions.json  character_ranks.json  character_skill_trees.json  character_skills.json  characters.json  light_cone_promotions.json  light_cone_ranks.json  light_cones.json  relic_config.json
data/raw/ExcelOutput/: AvatarConfig.json  AvatarPlayerIcon.json  ItemPlayerCard.json  PhoneThemeConfig.json  PlayerIcon.json  RelicConfig.json  RelicMainAffixConfig.json  RelicSubAffixConfig.json
data/skill/: info.json
func/: README.md  client.py  data.py  fetch_all.py  fetch_avatars.py  fetch_light_cones.py  fetch_materials.py  fetch_mihomo_map.py  fetch_monsters.py  fetch_raiders.py  fetch_relics.py  fetch_src.py  url.py
models/: avatar.py  avatar_config.py  enums.py  head_icon.py  light_cone.py  light_cone_config.py  material.py  monster.py  phone_theme.py  relic.py  relic_affix.py  wiki.py
res_func/: README.md  avatar.py  base_data.py  client.py  head_icon.py  light_cone.py  phone_theme.py  relic.py  relic_res.py  url.py
res_func/honkai_gg/: avatar.py
res_func/yatta/: avatar.py  model.py
(+1 files in other folders)
